fixed a quick alignment issue

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -135,6 +135,10 @@ a {
         height: 3rem;
         display: inline-block;
         margin-right: 1rem;
+
+        &:last-child {
+          margin-right: 0;
+        }
       }
     }
   }
@@ -288,6 +292,13 @@ a {
 
       p {
         margin-bottom: 3rem;
+      }
+
+      div.skills-section {
+        .skills-lang {
+          margin-right: 0;
+          display: block;
+        }
       }
     }
   }
